# ffmpeg-wrapper

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
.github/workflows/: linters.yml  tests.yml
docs/ffmpeg_wrapper/: index.md  simple.md
docs/ffmpeg_wrapper/tests/: index.md  test_commands.md
ffmpeg_wrapper/: __init__.py  simple.py
ffmpeg_wrapper/tests/: test_commands.py
