[tool.poetry]
name = "ffmpeg_wrapper"
version = "0.2.1"
description = "wrapper for FFMPEG"
authors = ["Pavel Maltsev <zeden123@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/speechki-book/ffmpeg-wrapper"
license = ""
keywords=["FFMPEG", "Python", "Wrapper"]
packages = [{include = "ffmpeg_wrapper"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",  # Chose either "3 - Alpha", "4 - Beta" or "5 - Production/Stable"
    # as the current state of your package
    "Intended Audience :: Developers",  # Define that your audience are developers
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
exclude = ["tests*"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "<2"


[tool.poetry.dev-dependencies]
black = "^22.10"
flake8 = "^5.0"
isort = "^5.12"
pre-commit = "*"
pytest = "^7"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | app/protobuf
)/
'''

[tool.flake8]
ignore = [
    # Too many leading '#' for block comment ( https://www.flake8rules.com/rules/E266.html )
    "E266",
    # Whitespace before ':' ( https://www.flake8rules.com/rules/E203.html )
    "E203"
]
max-line-length = 119
max-complexity = 15
select = "B,C,E,F,W,T4,B9"
exclude = [
    # No need to traverse our git directory
    ".git",
    # There's no value in checking cache directories
    "__pycache__",
    # The conf file is mostly autogenerated, ignore it
    "docs/source/conf.py",
    # The old directory contains Flake8 2.0
    "old",
    # This contains our built documentation
    "build",
    # This contains builds of flake8 that we don't want to check
    "dist",
    # django migrations
    "migrations",
    "app/protobuf/*"
]
# Module imported but unused ( https://www.flake8rules.com/rules/F401.html )
per-file-ignores = [
  "__init__.py:F401",
  "apps.py:F401",
  "setup.py:E501",
]


[tool.isort]
profile = "black"
line_length = 119
only_sections = true
force_sort_within_sections = true
lines_after_imports = 2
lexicographical = true
sections = ["FUTURE", "STDLIB", "BASEFRAMEWORK", "FRAMEWORKEXT", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_baseframework = ["django", "fastapi", "aiohttp"]
known_frameworkext = ["rest_framework", "starlette"]
src_paths = ["app"]
skip_glob = []
