[project]
name = "ffmpeg_wrapper"
version = "0.2.2"
description = "wrapper for FFMPEG"
authors = [{ name = "Pavel Maltsev", email = "zeden123@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
keywords = [
    "FFMPEG",
    "Python",
    "Wrapper",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/speechki-book/ffmpeg-wrapper"

[dependency-groups]
dev = [
    "black>=25,<26",
    "flake8>=7,<8",
    "flake8-pyproject>=1.2.3,<2",
    "isort>=5.12,<6",
    "pre-commit",
    "pytest>=7,<8",
]

[tool.uv]

[tool.uv.build-backend]
module-name = ["ffmpeg_wrapper"]
module-root = ""
source-exclude = ["tests*"]
wheel-exclude = ["tests*"]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"


[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | app/protobuf
)/
'''

[tool.flake8]
ignore = [
    # Too many leading '#' for block comment ( https://www.flake8rules.com/rules/E266.html )
    "E266",
    # Whitespace before ':' ( https://www.flake8rules.com/rules/E203.html )
    "E203"
]
max-line-length = 119
max-complexity = 15
select = "B,C,E,F,W,T4,B9"
exclude = [
    # No need to traverse our git directory
    ".git",
    # There's no value in checking cache directories
    "__pycache__",
    # The conf file is mostly autogenerated, ignore it
    "docs/source/conf.py",
    # The old directory contains Flake8 2.0
    "old",
    # This contains our built documentation
    "build",
    # This contains builds of flake8 that we don't want to check
    "dist",
    # django migrations
    "migrations",
    "app/protobuf/*"
]
# Module imported but unused ( https://www.flake8rules.com/rules/F401.html )
per-file-ignores = [
  "__init__.py:F401",
  "apps.py:F401",
  "setup.py:E501",
  "ffmpeg_wrapper/tests/test_commands.py:E501",
]


[tool.isort]
profile = "black"
line_length = 119
only_sections = true
force_sort_within_sections = true
lines_after_imports = 2
lexicographical = true
sections = ["FUTURE", "STDLIB", "BASEFRAMEWORK", "FRAMEWORKEXT", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_baseframework = ["django", "fastapi", "aiohttp"]
known_frameworkext = ["rest_framework", "starlette"]
src_paths = ["app"]
skip_glob = []
